# foreshadow

./: .env.example  .gitignore  CHANGELOG.md  DEMO.md  README.md  pyproject.toml  requirements.txt  seed.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  pages.yml
docs/: BENCH.md  SPEC-PROVENANCE.md  friction-log.md
docs/proof/: DEPLOY_PROOF.md
fixtures/cache/chemical/: allocation.json  film.edit_list.txt  incident.sealed  ledger.json  manifest.json  screenplay.json  shotplan.json
fixtures/cache/chemical/qc/: C1_attempt1.json  C2_attempt1.json  C3_attempt1.json  C4_attempt1.json  C4_attempt2.json  C6_attempt1.json  C7_attempt1.json  summary.json
fixtures/cache/forklift/: allocation.json  film.edit_list.txt  incident.sealed  ledger.json  manifest.json  screenplay.json  shotplan.json
fixtures/cache/forklift/qc/: S2_attempt1.json  S3_attempt1.json  S4_attempt1.json  S5_attempt1.json  S7_attempt1.json  S8_attempt1.json  summary.json
fixtures/cache/ladder/: allocation.json  film.edit_list.txt  incident.sealed  ledger.json  manifest.json  screenplay.json  shotplan.json
fixtures/qwen/chemical/: screenplay.json  shotplan.json
fixtures/qwen/forklift/: screenplay.json  shotplan.json
fixtures/qwen/ladder/: screenplay.json  shotplan.json
infra/fc/: PROOF.md  handler.py  s.yaml  wsgi.py
python/markdown_it_py-4.2.0.dist-info/: RECORD
python/pygments-2.20.0.dist-info/: RECORD
python/typer-0.27.0.dist-info/: RECORD
scripts/: bench.py  check_submission_readiness.py  regen_cache.py  verify_offline.py
seeds/: chemical.json  chemical.txt  forklift.json  forklift.txt  ladder.json  ladder.txt
site/: CNAME  index.html
site/pitch/: index.html
src/foreshadow/: __init__.py  batch.py  bench.py  cli.py  config.py  provenance.py  schemas.py  seeds.py  storage.py  utils.py
src/foreshadow/agents/: __init__.py  art.py  line_producer.py  qc.py  screenwriter.py
src/foreshadow/crypto/: __init__.py  merkle.py  sealing.py  signing.py
src/foreshadow/pipeline/: __init__.py  engine.py  stages.py
src/foreshadow/qwen/: __init__.py  base.py  fake.py  live.py  png.py
src/foreshadow/render/: __init__.py  animatic.py  narrate.py  orchestrator.py  stitch.py
tests/: conftest.py  support.py  test_agents.py  test_bench.py  test_cli.py  test_config.py  test_crypto_sealing.py  test_crypto_signing.py  test_fake_qwen.py  test_invariants.py  test_line_producer.py  test_live_qwen.py  test_merkle.py  test_pipeline_engine.py  test_pipeline_stages.py  test_png.py  test_preview.py  test_provenance_ledger.py  test_qwen_transport.py  test_render.py  test_replay_determinism.py  test_schemas.py  test_scripts_infra.py  test_seeds.py  test_storage.py  test_toolkit_api.py  test_utils.py
(+3 files in other folders)
