[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "foreshadow-pipeline"
version = "1.1.0"
description = "Agent film studio: turns near-miss incident reports into budget-optimal, provenance-signed cinematic safety films (Qwen Cloud pipeline)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Edy Cu" }]
keywords = ["qwen", "video-generation", "agents", "safety-training", "provenance", "merkle"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "typer>=0.16",
    "pydantic>=2.5",
    "pynacl>=1.5",
]

[project.optional-dependencies]
release = ["python-semantic-release>=9,<10"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6", "mypy>=1.11", "pip-audit>=2.7",
       "pillow>=10.0", "imageio>=2.30", "imageio-ffmpeg>=0.5", "numpy>=1.24"]
live = ["openai>=1.40"]
preview = ["pillow>=10.0", "imageio>=2.30", "imageio-ffmpeg>=0.5", "numpy>=1.24"]

[project.scripts]
foreshadow = "foreshadow.cli:main"

[project.urls]
Homepage = "https://foreshadow.edycu.dev"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["fixtures", "seeds"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "B008", # typer.Option(...)/typer.Argument(...) in defaults is the idiomatic typer pattern
    "E501", # descriptive CLI help text / f-strings routinely exceed 100 cols; not worth wrapping
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ["tests/", "fixtures/", "scripts/regen_cache.py"]

# ---------------------------------------------------------------------------
# Automatic semantic versioning, driven by Conventional Commits in THIS repo.
# This build/ folder is its own isolated git repo (no remote, not the monorepo).
#   fix:  -> patch   feat: -> minor   feat!/BREAKING CHANGE: -> major
# Bump locally with:  ./.venv/bin/semantic-release version
# (config is local-only: it commits + tags in this repo but never pushes.)
# ---------------------------------------------------------------------------
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/foreshadow/__init__.py:__version__"]
tag_format = "v{version}"
commit_message = "chore(release): {version} [skip ci]"
allow_zero_version = true
major_on_zero = false
build_command = ""

[tool.semantic_release.branches.main]
match = "(main|master)"

[tool.semantic_release.publish]
upload_to_vcs_release = false
